objects/APL_Billing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for APL Billing Result of Covnerted Opp</description>
    <fields>
        <fullName>Column_API_Names__c</fullName>
        <label>Column API Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Names__c</fullName>
        <label>Column Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>APL Billing</label>
</CustomObject>